--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     }
   ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^4.9.1",
-    "@typescript-eslint/eslint-plugin": "4.0.0",
-    "@typescript-eslint/parser": "4.0.0",
+    "@size-limit/preset-small-lib": "4.9.1",
+    "@typescript-eslint/eslint-plugin": "4.13.0",
+    "@typescript-eslint/parser": "4.13.0",
     "@upleveled/eslint-config-upleveled": "1.4.1",
     "babel-eslint": "10.0.0",
     "eslint": "7.5.0",
@@ -66,10 +66,13 @@
     "eslint-plugin-react-hooks": "4.0.8",
     "eslint-plugin-testing-library": "3.9.0",
     "eslint-plugin-unicorn": "25.0.1",
-    "husky": "^4.3.7",
-    "size-limit": "^4.9.1",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.1.0",
+    "husky": "4.3.7",
+    "size-limit": "4.9.1",
+    "tsdx": "0.14.1",
+    "tslib": "2.1.0",
     "typescript": "4.1.3"
+  },
+  "resolutions": {
+    "eslint": "7.5.0"
   }
 }
