--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "Karl Horky <karl.horky@gmail.com>"
   ],
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/preflight.esm.js",
+  "module": "dist/preflight.esm.js",
+  "type": "module",
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
@@ -17,37 +19,21 @@
     "node": ">=14"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
+    "start": "tsdx watch --format esm",
+    "build": "tsdx build --format esm",
     "test": "tsdx test",
     "lint": "tsdx lint src test --max-warnings 0",
-    "prepare": "tsdx build",
+    "prepare": "yarn build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
-  },
   "prettier": {
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "module": "dist/preflight.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/preflight.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/preflight.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.9.1",
     "@typescript-eslint/eslint-plugin": "4.13.0",
@@ -66,7 +52,6 @@
     "eslint-plugin-react-hooks": "4.0.8",
     "eslint-plugin-testing-library": "3.9.0",
     "eslint-plugin-unicorn": "25.0.1",
-    "husky": "4.3.7",
     "size-limit": "4.9.1",
     "tsdx": "0.14.1",
     "tslib": "2.1.0",
@@ -76,6 +61,7 @@
     "eslint": "7.5.0"
   },
   "dependencies": {
+    "execa": "5.0.0",
     "listr2": "3.2.3"
   }
 }
