--- a/package.json
+++ b/package.json
@@ -28,14 +28,10 @@
     "analyze": "size-limit --why"
   },
   "peerDependencies": {},
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.9.1",
+    "@types/node": "14.14.21",
+    "@types/wrap-ansi": "3.0.0",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
     "@upleveled/eslint-config-upleveled": "1.5.1",
@@ -57,11 +53,17 @@
     "tslib": "2.1.0",
     "typescript": "4.1.3"
   },
+  "dependencies": {
+    "chalk": "4.1.0",
+    "execa": "5.0.0",
+    "listr2": "3.2.3",
+    "wrap-ansi": "7.0.0"
+  },
   "resolutions": {
     "eslint": "7.17.0"
   },
-  "dependencies": {
-    "execa": "5.0.0",
-    "listr2": "3.2.3"
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
