--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@upleveled/preflight",
+  "private": false,
   "version": "1.0.0",
   "author": "UpLeveled (https://github.com/upleveled)",
   "contributors": [
