--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "José Fernando Höwer Barbosa <josehowerupn@gmail.com>",
     "Karl Horky <karl.horky@gmail.com>"
   ],
+  "repository": "upleveled/preflight",
   "license": "MIT",
   "type": "module",
   "main": "dist/preflight.esm.js",
