--- a/package.json
+++ b/package.json
@@ -59,9 +59,13 @@
     "typescript": "4.1.3"
   },
   "dependencies": {
+    "@types/cheerio": "0.22.23",
+    "@types/node-fetch": "2.5.8",
     "chalk": "4.1.0",
+    "cheerio": "1.0.0-rc.5",
     "execa": "5.0.0",
     "listr2": "3.2.3",
+    "node-fetch": "2.6.1",
     "wrap-ansi": "7.0.0"
   },
   "resolutions": {
