Add missing types

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "dependencies": {
     "@types/cheerio": "0.22.23",
-    "@types/node-fetch": "2.5.8",
+    "@types/node-fetch": "^2.5.8",
     "chalk": "4.1.0",
     "cheerio": "1.0.0-rc.5",
     "execa": "5.0.0",
