--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   "peerDependencies": {},
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.9.1",
+    "@types/cheerio": "0.22.23",
     "@types/node": "14.14.21",
+    "@types/node-fetch": "2.5.8",
     "@types/wrap-ansi": "3.0.0",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
@@ -59,8 +61,6 @@
     "typescript": "4.1.3"
   },
   "dependencies": {
-    "@types/cheerio": "0.22.23",
-    "@types/node-fetch": "^2.5.8",
     "chalk": "4.1.0",
     "cheerio": "1.0.0-rc.5",
     "execa": "5.0.0",
