--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "chalk": "4.1.0",
     "cheerio": "1.0.0-rc.5",
+    "depcheck": "1.3.1",
     "execa": "5.0.0",
     "listr2": "3.2.3",
     "node-fetch": "2.6.1",
