--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/cheerio": "0.22.23",
     "@types/node": "14.14.21",
     "@types/node-fetch": "2.5.8",
+    "@types/semver": "7.3.4",
     "@types/wrap-ansi": "3.0.0",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
@@ -67,6 +68,7 @@
     "execa": "5.0.0",
     "listr2": "3.2.3",
     "node-fetch": "2.6.1",
+    "semver": "7.3.4",
     "wrap-ansi": "7.0.0"
   },
   "resolutions": {
