--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/node": "14.14.22",
     "@types/node-fetch": "2.5.8",
     "@types/semver": "7.3.4",
-    "@types/wrap-ansi": "3.0.0",
     "@typescript-eslint/eslint-plugin": "4.14.0",
     "@typescript-eslint/parser": "4.14.0",
     "@upleveled/eslint-config-upleveled": "1.5.1",
@@ -68,8 +67,7 @@
     "execa": "5.0.0",
     "listr2": "3.3.0",
     "node-fetch": "2.6.1",
-    "semver": "7.3.4",
-    "wrap-ansi": "7.0.0"
+    "semver": "7.3.4"
   },
   "resolutions": {
     "eslint": "7.18.0"
