--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/cheerio": "0.22.23",
     "@types/node": "14.14.22",
     "@types/node-fetch": "2.5.8",
+    "@types/p-map": "2.0.0",
     "@types/semver": "7.3.4",
     "@typescript-eslint/eslint-plugin": "4.14.0",
     "@typescript-eslint/parser": "4.14.0",
@@ -55,6 +56,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-testing-library": "3.10.1",
     "eslint-plugin-unicorn": "26.0.1",
+    "p-map": "4.0.0",
     "size-limit": "4.9.1",
     "tsdx": "0.14.1",
     "tslib": "2.1.0",
