--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["bin", "test", "types", "src"],
+  "include": ["bin", "__tests__", "types", "src"],
   "exclude": [".eslintrc.cjs", "dist"],
   "compilerOptions": {
     "module": "esnext",
