--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript": "4.1.3"
   },
   "dependencies": {
+    "algoliasearch": "^4.8.4",
     "chalk": "4.1.0",
     "cheerio": "1.0.0-rc.5",
     "depcheck": "1.3.1",
