Change workflow to avoid duplicate runs for tags

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -1,5 +1,8 @@
 name: CI
-on: [push]
+on:
+  push:
+    branches:
+      - '**'
 jobs:
   build:
     name: Build, lint, and test on ${{ matrix.os }}
