Improve visibility of OS in workflow name

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -5,7 +5,7 @@ on:
       - '**'
 jobs:
   build:
-    name: Build, lint, and test on ${{ matrix.os }}
+    name: ${{ matrix.os }}: Build, lint, test
 
     runs-on: ${{ matrix.os }}
     strategy:
