--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "listr2": "3.3.0",
     "node-fetch": "2.6.1",
     "p-reduce": "^2.1.0",
+    "prettier": "^2.2.1",
     "semver": "7.3.4"
   },
   "resolutions": {
