--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "p-reduce": "^2.1.0",
     "prettier": "^2.2.1",
     "semver": "7.3.4",
-    "top-user-agents": "^1.0.20"
+    "top-user-agents": "1.0.21"
   },
   "resolutions": {
     "eslint": "7.19.0"
