--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '15.x'
+          node-version: '16'
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
