--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "peerDependencies": {},
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "7.13.8",
     "@size-limit/preset-small-lib": "4.10.2",
     "@types/node": "14.14.41",
     "@types/node-fetch": "2.5.10",
@@ -57,7 +58,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-testing-library": "4.1.1",
     "eslint-plugin-unicorn": "30.0.0",
-    "p-map": "4.0.0",
+    "p-map": "5.0.0",
     "size-limit": "4.10.2",
     "tsdx": "0.14.1",
     "tslib": "2.2.0",
@@ -78,5 +79,10 @@
   },
   "resolutions": {
     "eslint": "7.24.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\](?!aggregate-error|clean-stack|escape-string-regexp|indent-string|p-map).+\\.(js|jsx)$"
+    ]
   }
 }
