--- a/package.json
+++ b/package.json
@@ -36,27 +36,28 @@
   "peerDependencies": {},
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "7.14.0",
+    "@next/eslint-plugin-next": "10.2.1-canary.6",
     "@size-limit/preset-small-lib": "4.10.2",
     "@types/node": "14.14.43",
     "@types/node-fetch": "2.5.10",
     "@types/p-map": "2.0.0",
-    "@types/semver": "7.3.5",
-    "@typescript-eslint/eslint-plugin": "4.22.1",
-    "@typescript-eslint/parser": "4.22.1",
-    "@upleveled/eslint-config-upleveled": "1.12.0",
+    "@types/semver": "7.3.6",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
+    "@upleveled/eslint-config-upleveled": "1.13.1",
     "babel-eslint": "10.1.0",
-    "eslint": "7.25.0",
+    "eslint": "7.26.0",
     "eslint-config-react-app": "6.0.0",
     "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-flowtype": "5.7.2",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "2.23.2",
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-testing-library": "4.2.0",
+    "eslint-plugin-testing-library": "4.4.0",
     "eslint-plugin-unicorn": "31.0.0",
     "p-map": "5.0.0",
     "size-limit": "4.10.2",
@@ -68,7 +69,7 @@
     "algoliasearch": "^4.8.4",
     "chalk": "4.1.1",
     "cheerio": "1.0.0-rc.9",
-    "depcheck": "1.4.0",
+    "depcheck": "1.4.1",
     "execa": "5.0.0",
     "listr2": "3.8.2",
     "node-fetch": "2.6.1",
@@ -78,7 +79,7 @@
     "top-user-agents": "1.0.25"
   },
   "resolutions": {
-    "eslint": "7.25.0"
+    "eslint": "7.26.0"
   },
   "jest": {
     "transformIgnorePatterns": [
