--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   "peerDependencies": {},
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "7.14.0",
-    "@next/eslint-plugin-next": "10.2.1-canary.6",
+    "@next/eslint-plugin-next": "10.2.2",
     "@size-limit/preset-small-lib": "4.10.2",
     "@types/node": "14.14.43",
     "@types/node-fetch": "2.5.10",
     "@types/p-map": "2.0.0",
     "@types/semver": "7.3.6",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
-    "@upleveled/eslint-config-upleveled": "1.13.1",
+    "@typescript-eslint/eslint-plugin": "4.24.0",
+    "@typescript-eslint/parser": "4.24.0",
+    "@upleveled/eslint-config-upleveled": "1.13.4",
     "babel-eslint": "10.1.0",
     "eslint": "7.26.0",
     "eslint-config-react-app": "6.0.0",
@@ -57,7 +57,7 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-testing-library": "4.4.0",
+    "eslint-plugin-testing-library": "4.5.0",
     "eslint-plugin-unicorn": "32.0.1",
     "p-map": "5.0.0",
     "size-limit": "4.10.2",
@@ -76,7 +76,7 @@
     "p-reduce": "^3.0.0",
     "prettier": "^2.2.1",
     "semver": "7.3.5",
-    "top-user-agents": "1.0.25"
+    "top-user-agents": "1.0.26"
   },
   "resolutions": {
     "eslint": "7.26.0"
