--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lint": "tsdx lint src __tests__ --max-warnings 0",
     "prepare": "yarn build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "build-docker-ts": "tsc --project docker/tsconfig.json"
   },
   "peerDependencies": {},
   "devDependencies": {
