--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "node-fetch": "3.0.0",
     "p-reduce": "^3.0.0",
     "prettier": "^2.2.1",
+    "readdirp": "3.6.0",
     "semver": "7.3.5",
     "top-user-agents": "1.0.38"
   },
