--- a/package.json
+++ b/package.json
@@ -67,15 +67,15 @@
     "typescript": "4.4.3"
   },
   "dependencies": {
-    "algoliasearch": "^4.8.4",
+    "algoliasearch": "4.10.5",
     "chalk": "4.1.2",
     "cheerio": "1.0.0-rc.10",
     "depcheck": "1.4.2",
     "execa": "5.1.1",
     "listr2": "3.12.1",
     "node-fetch": "3.0.0",
-    "p-reduce": "^3.0.0",
-    "prettier": "^2.2.1",
+    "p-reduce": "3.0.0",
+    "prettier": "2.4.1",
     "readdirp": "3.6.0",
     "semver": "7.3.5",
     "top-user-agents": "1.0.38"
