Update dependency execa to v6 (#159)
* Update dependency execa to v6

* Update imports for new execa version

* Upgrade jest, ts-jest, add ESM tranform ignores

Co-authored-by: Renovate Bot <bot@renovateapp.com>
Co-authored-by: Karl Horky <karl.horky@gmail.com>

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "chalk": "5.0.0",
     "cheerio": "1.0.0-rc.10",
     "depcheck": "1.4.2",
-    "execa": "5.1.1",
+    "execa": "6.0.0",
     "listr2": "3.13.5",
     "node-fetch": "3.1.0",
     "p-reduce": "3.0.0",
@@ -82,11 +82,13 @@
   },
   "resolutions": {
     "tsdx/**/node-notifier": "10.0.0",
+    "tsdx/jest": "27.4.4",
+    "tsdx/ts-jest": "27.1.1",
     "eslint": "8.4.1"
   },
   "jest": {
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\](?!aggregate-error|clean-stack|escape-string-regexp|indent-string|p-map).+\\.(js|jsx)$"
+      "[/\\\\]node_modules[/\\\\](?!aggregate-error|clean-stack|escape-string-regexp|execa|human-signals|indent-string|is-stream|mimic-fn|npm-run-path|onetime|p-map|path-key|strip-final-newline).+\\.(js|jsx)$"
     ]
   }
 }
