--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "7.16.0",
     "@next/eslint-plugin-next": "12.0.7",
-    "@size-limit/preset-small-lib": "6.0.4",
+    "@size-limit/file": "7.0.4",
     "@types/node": "16.11.12",
     "@types/p-map": "2.0.0",
     "@types/semver": "7.3.9",
