--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "tsdx/**/node-notifier": "10.0.0",
     "tsdx/jest": "27.4.5",
     "tsdx/ts-jest": "27.1.2",
+    "@typescript-eslint/eslint-plugin": "5.8.0",
+    "@typescript-eslint/parser": "5.8.0",
     "eslint": "8.4.1",
     "eslint-plugin-react": "7.28.0"
   },
