--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@typescript-eslint/eslint-plugin": "5.8.1",
     "@typescript-eslint/parser": "5.8.1",
     "eslint": "8.5.0",
+    "eslint-plugin-import": "2.25.4",
     "eslint-plugin-react": "7.28.0"
   },
   "jest": {
