--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "algoliasearch": "4.12.0",
     "chalk": "5.0.0",
     "cheerio": "1.0.0-rc.10",
-    "depcheck": "1.4.2",
+    "depcheck": "upleveled/depcheck",
     "execa": "6.0.0",
     "listr2": "4.0.0",
     "node-fetch": "3.1.0",
