--- a/package.json
+++ b/package.json
@@ -36,16 +36,19 @@
   },
   "peerDependencies": {},
   "devDependencies": {
+    "@babel/eslint-parser": "7.16.5",
     "@babel/plugin-transform-modules-commonjs": "7.16.8",
-    "@next/eslint-plugin-next": "12.0.8",
+    "@next/eslint-plugin-next": "12.0.9",
     "@size-limit/file": "7.0.5",
-    "@types/node": "17.0.10",
+    "@types/node": "17.0.12",
     "@types/p-map": "2.0.0",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
     "@types/semver": "7.3.9",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
-    "@upleveled/eslint-config-upleveled": "2.1.9",
-    "@upleveled/eslint-plugin-upleveled": "2.0.1",
+    "@typescript-eslint/eslint-plugin": "5.10.1",
+    "@typescript-eslint/parser": "5.10.1",
+    "@upleveled/eslint-config-upleveled": "2.3.2",
+    "@upleveled/eslint-plugin-upleveled": "2.1.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "27.4.6",
     "eslint": "8.7.0",
@@ -59,7 +62,9 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "eslint-plugin-testing-library": "5.0.3",
+    "eslint-plugin-security": "1.4.0",
+    "eslint-plugin-sonarjs": "0.11.0",
+    "eslint-plugin-testing-library": "5.0.4",
     "eslint-plugin-unicorn": "40.1.0",
     "p-map": "5.3.0",
     "size-limit": "7.0.5",
@@ -85,8 +90,8 @@
     "tsdx/**/node-notifier": "10.0.0",
     "tsdx/jest": "27.4.7",
     "tsdx/ts-jest": "27.1.3",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.10.1",
+    "@typescript-eslint/parser": "5.10.1",
     "eslint": "8.7.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-react": "7.28.0"
