--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "@typescript-eslint/parser": "5.16.0",
     "eslint": "8.11.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-react": "7.29.4"
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.3.0"
   },
   "jest": {
     "transformIgnorePatterns": [
