--- a/package.json
+++ b/package.json
@@ -40,31 +40,32 @@
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
     "@next/eslint-plugin-next": "12.3.1",
     "@size-limit/file": "8.1.0",
-    "@types/node": "18.7.23",
+    "@types/node": "18.8.3",
     "@types/p-map": "2.0.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/semver": "7.3.12",
-    "@typescript-eslint/eslint-plugin": "5.38.1",
-    "@typescript-eslint/parser": "5.38.1",
-    "@upleveled/eslint-config-upleveled": "2.15.0",
+    "@typescript-eslint/eslint-plugin": "5.39.0",
+    "@typescript-eslint/parser": "5.39.0",
+    "@upleveled/eslint-config-upleveled": "2.16.2",
     "@upleveled/eslint-plugin-upleveled": "2.1.6",
     "babel-eslint": "10.1.0",
     "babel-jest": "29.1.2",
-    "eslint": "8.24.0",
+    "eslint": "8.25.0",
     "eslint-config-react-app": "7.0.1",
     "eslint-import-resolver-typescript": "3.5.1",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.0.4",
+    "eslint-plugin-jest": "27.1.1",
     "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-jsx-expressions": "1.3.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-security": "1.5.0",
     "eslint-plugin-sonarjs": "0.15.0",
-    "eslint-plugin-testing-library": "5.7.0",
+    "eslint-plugin-testing-library": "5.7.2",
     "eslint-plugin-unicorn": "44.0.2",
     "p-map": "5.5.0",
     "size-limit": "8.1.0",
@@ -74,7 +75,7 @@
   },
   "dependencies": {
     "algoliasearch": "4.14.2",
-    "chalk": "5.0.1",
+    "chalk": "5.1.0",
     "cheerio": "1.0.0-rc.12",
     "depcheck": "1.4.3",
     "execa": "6.1.0",
@@ -83,16 +84,17 @@
     "p-reduce": "3.0.0",
     "prettier": "2.7.1",
     "readdirp": "3.6.0",
-    "semver": "7.3.7",
+    "semver": "7.3.8",
     "top-user-agents": "1.0.47"
   },
   "resolutions": {
     "tsdx/**/node-notifier": "10.0.1",
     "tsdx/jest": "29.1.2",
     "tsdx/ts-jest": "29.0.3",
-    "@typescript-eslint/eslint-plugin": "5.38.1",
-    "@typescript-eslint/parser": "5.38.1",
-    "eslint": "8.24.0",
+    "tsdx/typescript": "4.8.4",
+    "@typescript-eslint/eslint-plugin": "5.39.0",
+    "@typescript-eslint/parser": "5.39.0",
+    "eslint": "8.25.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.8",
