--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Lint
         run: yarn lint
+        env:
+          SKIP_SAFEQL: true
 
       - name: Build
         run: yarn build
