Add types to ESLint config, lint and check types

--- a/docker/tsconfig.json
+++ b/docker/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "../tsconfig.json",
-  "include": [".eslintrc.cjs", "./**/*.js", "./**/*.ts"],
+  "include": [".eslintrc.cjs", "./**/*.ts"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "rootDir": ".",
-    "noEmit": false
+    "rootDir": "."
   }
 }
