--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "yarn build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "build-docker-ts": "tsc --project docker/tsconfig.json"
+    "build-docker-ts": "tsc --project docker/tsconfig.build.json"
   },
   "peerDependencies": {},
   "devDependencies": {
