--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["bin", "__tests__", "src"],
-  "exclude": ["babel.config.cjs", ".eslintrc.cjs", "dist"],
+  "include": ["bin", "__tests__", "src", ".eslintrc.cjs"],
+  "exclude": ["dist"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
@@ -30,6 +30,7 @@
     "forceConsistentCasingInFileNames": true,
     // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
     "noEmit": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "checkJs": true
   }
 }
