--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "strict": true,
     // linter checks for common issues
     "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true,
     "noFallthroughCasesInSwitch": true,
     // use Node's module resolution algorithm, instead of the legacy TS one
     "moduleResolution": "node",
