--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@types/semver": "7.3.13",
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
-    "@upleveled/eslint-config-upleveled": "4.0.10",
-    "@upleveled/eslint-plugin-upleveled": "2.1.6",
+    "eslint-config-upleveled": "4.0.12",
+    "eslint-plugin-upleveled": "2.1.7",
     "babel-jest": "29.5.0",
     "eslint": "8.38.0",
     "eslint-config-react-app": "7.0.1",
