--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -20,16 +20,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 'latest'
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+          cache: 'pnpm'
 
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
+      - run: pnpm install
 
       - name: Compile TypeScript and build Docker images
-        run: yarn build-docker-ts
+        run: pnpm build-docker-ts
 
       # Publish to container registry
       - name: Log in to the Container registry
