--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -24,19 +24,28 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 'latest'
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+          cache: 'pnpm'
 
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
+      - run: pnpm install
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
+
+      - run: pnpm tsc --project __tests__/tsconfig.json
+      - run: pnpm tsc --project bin/tsconfig.json
+      - run: pnpm tsc --project docker/tsconfig.json
+      - run: pnpm tsc --project tsconfig.config.json
 
       - name: Build
-        run: yarn build
+        run: pnpm build
 
       - name: Test
-        run: yarn test --ci --maxWorkers=2
+        run: pnpm test -- --ci --maxWorkers=2
