Add Stylelint checks and checks output consistency (#377)
* Add stylelint check

* Fix function name

* Fix casing on stilelint

* Add stylelint config validation

* Add additional file extentions

* Update test

* Add exeptions

* Add colors

* Fix error in colors

* Add icons

* Revert "Add icons"

This reverts commit 4ad180a716c7cf113160bafcc46989c42b30256e.

* Add falback renderer

* Update src/checks/stylelingConfigIsValid.ts

* Update src/checks/stylelingConfigIsValid.ts

* Update src/checks/stylelingConfigIsValid.ts

* Update snapshot

* Fix snapshot

* Update src/checks/stylelint.ts

* Update filename

* Update src/checks/stylelintConfigIsValid.ts

* Update e2e.test.ts.snap

* Use yarn until package is updated

* Update snapshot

* Use Json output format instead of string

* Update string matching stylelint disable

* Use pnpm instad of yarn

* Simplify variable

* Fix eslint errors

* Get type from stylelint

* Update supported extentions

* Use join() instead of toString()

* Use version without period

* Use Stylelint instead of ESLint

* Use periodless pattern and add file deletion

* Use parameter

* Add conditional to check react projects

* Move conditional to the top of the file

* Update fileExtensions

* Update variable names

* Fix indentation and variable names

* Fix capitalization

* update variable names

* Update conditional to match codebase

* Update error message to improve clarity

* Remve unnecesary if exists in message

* Add early return in stylelint check too

* Update src/checks/stylelint.ts

Co-authored-by: Karl Horky <karl.horky@gmail.com>

* Update src/checks/eslintConfigIsValid.ts

Co-authored-by: Karl Horky <karl.horky@gmail.com>

* Update src/checks/stylelintConfigIsValid.ts

Co-authored-by: Karl Horky <karl.horky@gmail.com>

* Update command to pnpm

* Fix error in command

* Update message to match codebase

* Updat

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@upleveled/preflight",
-  "version": "2.0.1",
+  "version": "2.1.0-0",
   "repository": "upleveled/preflight",
   "license": "MIT",
   "author": "UpLeveled (https://github.com/upleveled)",
@@ -38,6 +38,7 @@
     ]
   },
   "dependencies": {
+    "@types/eslint": "8.37.0",
     "algoliasearch": "4.17.0",
     "chalk": "5.2.0",
     "cheerio": "1.0.0-rc.12",
@@ -88,6 +89,7 @@
     "p-map": "5.5.0",
     "postinstall-postinstall": "2.1.0",
     "size-limit": "8.2.4",
+    "stylelint": "15.5.0",
     "tsdx": "0.14.1",
     "tslib": "2.5.0",
     "typescript": "5.0.4"
