Add Docker build and run scripts (#393)
* Create Docker build and run scripts

* Update package.json

Co-authored-by: Karl Horky <karl.horky@gmail.com>

* Update package.json

Co-authored-by: Karl Horky <karl.horky@gmail.com>

* Add --tag

---------

Co-authored-by: Karl Horky <karl.horky@gmail.com>

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "scripts": {
     "analyze": "size-limit --why",
     "build": "tsdx build --format esm --target node",
-    "build-docker-ts": "tsc --project docker/tsconfig.build.json",
+    "docker-build": "docker build --tag preflight .",
+    "docker-build-run": "pnpm docker-build-ts && pnpm docker-build && pnpm docker-run",
+    "docker-build-ts": "tsc --project docker/tsconfig.build.json",
+    "docker-run": "docker run preflight",
     "postinstall": "patch-package",
     "lint": "eslint . --max-warnings 0",
     "prepare": "pnpm build",
