--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.21.8",
     "@babel/plugin-transform-modules-commonjs": "7.21.5",
+    "@jest/globals": "29.5.0",
     "@next/eslint-plugin-next": "13.4.1",
     "@size-limit/file": "8.2.4",
     "@types/domhandler": "2.4.2",
