--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\](?!aggregate-error|clean-stack|escape-string-regexp|execa|human-signals|indent-string|is-stream|mimic-fn|npm-run-path|onetime|p-map|path-key|strip-final-newline).+\\.(js|jsx)$"
+      "node_modules/(?!execa)/"
     ]
   },
   "dependencies": {
@@ -46,6 +46,7 @@
     "chalk": "5.2.0",
     "cheerio": "1.0.0-rc.12",
     "depcheck": "1.4.3",
+    "domhandler": "5.0.3",
     "execa": "7.1.1",
     "listr2": "6.4.2",
     "node-fetch": "3.3.1",
@@ -57,39 +58,16 @@
     "top-user-agents": "1.0.52"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.21.8",
     "@babel/plugin-transform-modules-commonjs": "7.21.5",
     "@jest/globals": "29.5.0",
-    "@next/eslint-plugin-next": "13.4.1",
     "@size-limit/file": "8.2.4",
-    "@types/domhandler": "2.4.2",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.2",
     "@types/p-map": "2.0.0",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.4",
     "@types/semver": "7.3.13",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
     "babel-jest": "29.5.0",
     "eslint": "8.39.0",
-    "eslint-config-react-app": "7.0.1",
-    "eslint-config-upleveled": "4.2.0",
-    "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-cypress": "2.13.3",
-    "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest": "27.2.1",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-jsx-expressions": "1.3.1",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-security": "1.7.1",
-    "eslint-plugin-sonarjs": "0.19.0",
-    "eslint-plugin-testing-library": "5.10.3",
-    "eslint-plugin-unicorn": "47.0.0",
-    "eslint-plugin-upleveled": "2.1.7",
+    "eslint-config-upleveled": "4.3.0",
     "p-map": "6.0.0",
     "postinstall-postinstall": "2.1.0",
     "size-limit": "8.2.4",
@@ -105,6 +83,7 @@
     "overrides": {
       "node-notifier": "10.0.1",
       "jest": "29.5.0",
+      "rollup-plugin-typescript2": "^0.32.0",
       "ts-jest": "29.1.0",
       "typescript": "5.0.4"
     }
