--- a/docker/tsconfig.json
+++ b/docker/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "eslint-config-upleveled/tsconfig.base.json",
   "compilerOptions": {
     "module": "Node16",
+    "moduleResolution": "Node16",
     "target": "ES2020"
   },
   "include": [".eslintrc.cjs", "clone-and-preflight.ts"],
