--- a/tsconfig.nonsrc.json
+++ b/tsconfig.nonsrc.json
@@ -4,6 +4,7 @@
   "extends": "eslint-config-upleveled/tsconfig.base.json",
   "compilerOptions": {
     "module": "Node16",
+    "moduleResolution": "Node16",
     "target": "ES2020",
     "checkJs": true
   },
