--- a/package.json
+++ b/package.json
@@ -81,6 +81,12 @@
   },
   "pnpm": {
     "overrides": {
+      "@typescript-eslint/eslint-plugin": "6.3.0",
+      "@typescript-eslint/parser": "6.3.0",
+      "eslint": "8.47.0",
+      "eslint-config-react-app": "7.0.1",
+      "eslint-plugin-jest": "27.2.3",
+      "eslint-plugin-react-hooks": "4.6.0",
       "node-notifier": "10.0.1",
       "jest": "29.5.0",
       "rollup-plugin-typescript2": "^0.32.0",
