--- a/package.json
+++ b/package.json
@@ -55,19 +55,19 @@
     "prettier": "3.0.3",
     "readdirp": "3.6.0",
     "semver": "7.5.4",
-    "top-user-agents": "1.0.64"
+    "top-user-agents": "1.0.65"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "7.23.0",
     "@jest/globals": "29.7.0",
     "@size-limit/file": "9.0.0",
     "@types/jest": "29.5.6",
-    "@types/node": "20.8.7",
+    "@types/node": "20.8.9",
     "@types/p-map": "2.0.0",
     "@types/semver": "7.5.4",
     "babel-jest": "29.7.0",
-    "eslint": "8.51.0",
-    "eslint-config-upleveled": "5.1.0",
+    "eslint": "8.52.0",
+    "eslint-config-upleveled": "5.1.1",
     "p-map": "6.0.0",
     "postinstall-postinstall": "2.1.0",
     "size-limit": "9.0.0",
@@ -81,10 +81,11 @@
   },
   "pnpm": {
     "overrides": {
-      "@typescript-eslint/eslint-plugin": "6.3.0",
-      "@typescript-eslint/parser": "6.3.0",
+      "@typescript-eslint/eslint-plugin": "6.9.0",
+      "@typescript-eslint/parser": "6.9.0",
+      "@typescript-eslint/scope-manager": "6.9.0",
+      "@typescript-eslint/utils": "6.9.0",
       "eslint": "8.47.0",
-      "eslint-config-react-app": "7.0.1",
       "eslint-plugin-jest": "27.2.3",
       "eslint-plugin-react-hooks": "4.6.0",
       "node-notifier": "10.0.1",
