--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@upleveled/preflight",
-  "version": "3.0.0",
+  "version": "4.0.0-0",
   "repository": "upleveled/preflight",
   "license": "MIT",
   "author": "UpLeveled (https://github.com/upleveled)",
