Avoid ESLint path resolution errors on Windows (#469)

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -45,15 +45,21 @@ jobs:
 
       - run: pnpm install
       - run: pnpm install
+        if: runner.os != 'Windows'
         working-directory: docker
 
       - name: Lint
+        if: runner.os != 'Windows'
         run: pnpm lint
 
       - run: pnpm tsc
+        if: runner.os != 'Windows'
       - run: pnpm tsc --project bin/tsconfig.json
+        if: runner.os != 'Windows'
       - run: pnpm tsc --project docker/tsconfig.json
+        if: runner.os != 'Windows'
       - run: pnpm tsc --project tsconfig.nonsrc.json
+        if: runner.os != 'Windows'
 
       - name: Build
         run: pnpm build
