Update dependency eslint-config-upleveled to v7 (#472)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Karl Horky <karl.horky@gmail.com>

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -52,13 +52,7 @@ jobs:
         if: runner.os != 'Windows'
         run: pnpm lint
 
-      - run: pnpm tsc
-        if: runner.os != 'Windows'
-      - run: pnpm tsc --project bin/tsconfig.json
-        if: runner.os != 'Windows'
-      - run: pnpm tsc --project docker/tsconfig.json
-        if: runner.os != 'Windows'
-      - run: pnpm tsc --project tsconfig.nonsrc.json
+      - run: pnpm tsc --build
         if: runner.os != 'Windows'
 
       - name: Build
