--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build": "tsdx build --format esm --target node",
+    "build": "tsdx build --format esm --target node --tsconfig tsconfig.src.json",
     "docker-build": "docker build --tag preflight .",
     "docker-build-run": "pnpm docker-build-ts && pnpm docker-build && pnpm docker-run",
     "docker-build-ts": "tsc --project docker/tsconfig.build.json",
@@ -61,13 +61,14 @@
     "@babel/plugin-transform-modules-commonjs": "7.23.3",
     "@jest/globals": "29.7.0",
     "@size-limit/file": "11.0.0",
+    "@types/babel__core": "7.20.5",
     "@types/jest": "29.5.10",
     "@types/node": "20.9.4",
     "@types/p-map": "2.0.0",
     "@types/semver": "7.5.6",
     "babel-jest": "29.7.0",
     "eslint": "8.54.0",
-    "eslint-config-upleveled": "5.1.1",
+    "eslint-config-upleveled": "7.3.1",
     "p-map": "6.0.0",
     "postinstall-postinstall": "2.1.0",
     "size-limit": "11.0.0",
@@ -81,12 +82,12 @@
   },
   "pnpm": {
     "overrides": {
-      "@typescript-eslint/eslint-plugin": "6.9.0",
-      "@typescript-eslint/parser": "6.9.0",
-      "@typescript-eslint/scope-manager": "6.9.0",
-      "@typescript-eslint/utils": "6.9.0",
-      "eslint": "8.47.0",
-      "eslint-plugin-jest": "27.2.3",
+      "@typescript-eslint/eslint-plugin": "6.12.0",
+      "@typescript-eslint/parser": "6.12.0",
+      "@typescript-eslint/scope-manager": "6.12.0",
+      "@typescript-eslint/utils": "6.12.0",
+      "eslint": "8.53.0",
+      "eslint-plugin-jest": "27.6.0",
       "eslint-plugin-react-hooks": "4.6.0",
       "node-notifier": "10.0.1",
       "normalize-package-data@2.5.0>semver": "5.7.2",
