--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -27,12 +27,12 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 'lts/*'
           cache: 'pnpm'
 
       - run: pnpm install
 
-      - name: Compile TypeScript and build Docker images
+      - name: Compile TypeScript
         run: pnpm docker-build-ts
 
       # Publish to container registry
