--- a/bin/tsconfig.json
+++ b/bin/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "eslint-config-upleveled/tsconfig.base.json",
-  "include": [".eslintrc.cjs", "preflight.js"],
+  "include": ["preflight.js"],
   "exclude": ["node_modules"]
 }
