--- a/docker/tsconfig.json
+++ b/docker/tsconfig.json
@@ -5,6 +5,6 @@
     "moduleResolution": "Node16",
     "target": "ES2020"
   },
-  "include": [".eslintrc.cjs", "clone-and-preflight.ts"],
+  "include": ["clone-and-preflight.ts"],
   "exclude": ["node_modules"]
 }
