--- a/tsconfig.nonsrc.json
+++ b/tsconfig.nonsrc.json
@@ -3,13 +3,13 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "eslint-config-upleveled/tsconfig.base.json",
   "compilerOptions": {
+    "composite": true,
     "module": "Node16",
     "moduleResolution": "Node16",
     "target": "ES2020",
     "checkJs": true
   },
   "include": [
-    "**/.eslintrc.cjs",
     "**/*.ts",
     "**/*.tsx",
     "**/*.js",
@@ -17,5 +17,12 @@
     "**/*.cjs",
     "**/*.mjs"
   ],
-  "exclude": ["node_modules", "bin", "dist", "docker", "src"]
+  "exclude": [
+    "node_modules",
+    "__tests__/fixtures",
+    "bin",
+    "dist",
+    "docker",
+    "src"
+  ]
 }
