Add 30 minute timeouts to GitHub Actions workflows

--- a/.github/workflows/package-size.yml
+++ b/.github/workflows/package-size.yml
@@ -3,6 +3,7 @@ on: [pull_request]
 jobs:
   size:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     env:
       CI_JOB_NUMBER: 1
     steps:
