--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -13,6 +13,7 @@ jobs:
     if: ${{ github.event.ref_type == 'tag' || github.event.inputs.dispatchConfirmation == 'Workflow dispatch confirmed' }}
     name: Build and push Docker image
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       contents: read
       packages: write
